Fix nav wrapping issue.

--- a/app/assets/stylesheets/styleguide/_sg_navigation.scss
+++ b/app/assets/stylesheets/styleguide/_sg_navigation.scss
@@ -6,7 +6,7 @@
 
 .styleguide-nav-container {
   width: 100%;
-  height: 49px;
+  height: 51px;
 }
 
 .styleguide-nav {
@@ -19,7 +19,8 @@
   > li {
     width: 100%;
     @include respond-to($mq-l) {
-      display: inline-block;
+      @include inline-block;
+//      display: inline-block;
       width: auto;
       border-bottom: none;
     }
